# ComfyUI_CogView4-6B_diffusers

./: README.md  __init__.py  cogview4_node.py  pyproject.toml
.github/workflows/: publish.yml
